--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "cordova-js": "^4.2.0",
-    "cordova-plugin-contacts": "^2.2.1",
+    "cordova-plugin-contacts": "git@github.com:meirotstein/cordova-plugin-contacts.git",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
