try travis with local gulp only

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "cordova-plugin-contacts": "https://github.com/meirotstein/cordova-plugin-contacts.git",
+    "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.11",
