--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "cordova-plugin-contacts-mock",
-  "version": "0.1.0-dev",
-  "description": "mock contacts plugin for web-based development",
+  "version": "1.0.0",
+  "description": "mock cordova contacts plugin for web-based development",
   "scripts": {
     "test": "./node_modules/jasmine-node/bin/jasmine-node spec"
   },
   "main": "src/js/index.js",
-  "author": "Meir Rotstein",
+  "author": {
+    "name" : "Meir Rotstein",
+    "email" : "meir@rotstein.co.il",
+    "url" : "http://www.rotstein.co.il"
+  },
   "license": "ISC",
   "browser": {
     "cordova/argscheck": "./lib/argscheck.js",
