--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "test": "./node_modules/jasmine-node/bin/jasmine-node spec"
   },
+  "keywords": [
+    "cordova",
+    "contacts",
+    "mock"
+  ],
   "main": "src/js/index.js",
   "author": {
     "name" : "Meir Rotstein",
